--- a/index.html
+++ b/index.html
@@ -16,7 +16,20 @@
 <body>
     <!-- header start  -->
     <header>
-
+        <div class="header-div">
+            <div class="side-element">
+                <img src="images/icons/logo.png" alt="" class="icon">
+                <p class="icon-name">Idea</p>
+            </div>
+            <nav>
+                <ul>
+                    <li><a href="">Home</a></li>
+                    <li><a href="">About</a></li>
+                    <li><a href="">Works</a></li>
+                    <li><img src="images/icons/profile.png" alt=""></li>
+                </ul>
+            </nav>
+        </div>
     </header>
     <!-- header end  -->
     <main>
